# mimi-ble-terminal

./: .gitignore  CMakeLists.txt  README.md
.run/: ble_terminal.run.xml
src/: ble_uart_client.cpp  ble_uart_client.h  main.cpp
